--- a/print.html
+++ b/print.html
@@ -173,7 +173,8 @@
                 <main>
                     <h1 id="intro"><a class="header" href="#intro">Intro</a></h1>
 <p>这是 <a href="https://github.com/m4n5ter">M4n5ter</a> 的博客</p>
-<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><p>Tower 是一个专注于对网络编程进行抽象的框架，将网络编程中的各行为进行抽象从而提高代码复用率。</p>
+<div style="break-before: page; page-break-before: always;"></div><div style="break-before: page; page-break-before: always;"></div><h3 id="简介"><a class="header" href="#简介">简介</a></h3>
+<p>Tower 是一个专注于对网络编程进行抽象的框架，将网络编程中的各行为进行抽象从而提高代码复用率。</p>
 <p>Tower 最核心的抽象为 Service trait，其接受一个 request 进行处理，成功则返回 response，否则返回 error。</p>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">#![allow(unused)]
 </span><span class="boring">fn main() {
