--- a/print.html
+++ b/print.html
@@ -175,6 +175,10 @@
 <h1 id="intro"><a class="header" href="#intro">Intro</a></h1>
 <p>这是 <a href="https://github.com/m4n5ter">M4n5ter</a> 的博客</p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+<h3 id="rust-的开始"><a class="header" href="#rust-的开始">rust 的开始</a></h3>
+<p><a href="https://github.com/KaiserY/trpl-zh-cn">the book</a></p>
+<p><a href="https://course.rs">rust course</a></p>
+<p><a href="https://github.com/M4n5ter/rustlings-solutions">rustlings 5.2.1 解决方案</a></p>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h3 id="简介"><a class="header" href="#简介">简介</a></h3>
 <p>Tower 是一个专注于对网络编程进行抽象的框架，将网络编程中的各行为进行抽象从而提高代码复用率。</p>
