--- a/rust/rust.html
+++ b/rust/rust.html
@@ -174,6 +174,10 @@
                 </div>
                 <main>
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+<h3 id="rust-的开始"><a class="header" href="#rust-的开始">rust 的开始</a></h3>
+<p><a href="https://github.com/KaiserY/trpl-zh-cn">the book</a></p>
+<p><a href="https://course.rs">rust course</a></p>
+<p><a href="https://github.com/M4n5ter/rustlings-solutions">rustlings 5.2.1 解决方案</a></p>
 
                     <div id="giscus-container"></div>
                 </main>
