deploy: 9c41ecfe1ee6ce68e8acd33f1c7826e900e7c371

--- a/links/links.html
+++ b/links/links.html
@@ -178,6 +178,9 @@
 <h2 id="tcp"><a class="header" href="#tcp">TCP</a></h2>
 <p><a href="https://www.ietf.org/rfc/rfc0793.txt">rfc793 原件</a></p>
 <p>rfc793 是 1981 年的文件了，一些内容与目前实际情况有所不同</p>
+<h2 id="meilisearch"><a class="header" href="#meilisearch">Meilisearch</a></h2>
+<p><a href="https://github.com/meilisearch/meilisearch/discussions/2070">Experimental feature: auto-batching · Discussion #2070 · meilisearch/meilisearch · GitHub</a></p>
+<p>开启自动批处理 <code>--enable-auto-batching</code> 来提升索引速度。 </p>
 
                     <div id="giscus-container"></div>
                 </main>
