--- a/rust/mini-redis/mini-redis.html
+++ b/rust/mini-redis/mini-redis.html
@@ -119,7 +119,7 @@
                     <a href="https://github.com/m4n5ter/m4n5ter.github.io" title="Git repository" aria-label="Git repository">
                         <i id="git-repository-button" class="fa fa-github"></i>
                     </a>
-                    <a href="https://github.com/sunface/m4n5ter.github.io/edit/main/src/" title="Suggest an edit" aria-label="Suggest an edit">
+                    <a href="https://github.com/m4n5ter/m4n5ter.github.io/edit/main/src/" title="Suggest an edit" aria-label="Suggest an edit">
                         <i id="git-edit-button" class="fa fa-edit"></i>
                     </a>
                 </div>
