--- a/intro/intro.html
+++ b/intro/intro.html
@@ -176,7 +176,8 @@
                     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="intro"><a class="header" href="#intro">Intro</a></h1>
 <blockquote>
-<p>这里是 <a href="https://github.com/m4n5ter">M4n5ter</a> 的博客，记录我的学习过程 ：)</p>
+<p>我是 <a href="https://github.com/m4n5ter">M4n5ter</a> ，将在这里记录我的学习过程 ：)</p>
+<p><em>参照 rust course 而建</em></p>
 </blockquote>
 <img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/smile.jpg?raw=true">
 
